--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sound-01",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Sound sensor driver.",
   "author": "Nanchao Inc.",
   "license": "MIT",
@@ -19,7 +19,7 @@
   "main": "src/index.js",
   "device-typings": "typings/device.d.ts",
   "engines": {
-    "ruff": "~1.2.0"
+    "ruff": ">=1.2.0 <1.4.0"
   },
   "scripts": {
     "install-sdk": "rvm install --local",
